--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Controversy as an art.</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Δοκιμή</title>
+  </head>
+  
+  <body>  
+  <p>Το <strong>γλωσσικό χιούμορ<strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p><br>
+  <ol>
+    <li>Η γλώσσα είναι ένα μέσο με το οποίο δηλώνονται πράγματα ή σκέψεις μέσω ήχων.<br>
+      Είναι νόμος της γλώσσας ότι κάθε δεδομένος γλωσσικός ήχος δηλώνει το ίδιο πράγμα και μάλιστα μόνο εκείνο.</li>
+    <li>Οι λέξεις είναι πράγματα που φτιάχτηκαν από τον άνθρωπο και χρησιμοποιούνται από τον άνθρωπο, και όχι πρόσωπα με δικό τους θυμικό και συνείδηση.<br>
+      Το νόημά τους ή η ανυπαρξία νοήματός τους εξαρτάται από τη σωστή ή μη χρήση τους από τον χρήστη.</li>
+  </ol>
