--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Δοκιμή</title>
   </head>
+  <img src="/ANIMALS_SHELFS_BOOKS.jpg" alt="Animals coming out of books"/>
   
   <body>  
   <p>Το <strong>γλωσσικό χιούμορ<strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p><br>
