--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <title>Δοκιμή</title>
   </head>
+  <h1>Χιούμορ και άλλα</h1>
   <img src="/ANIMALS_SHELFS_BOOKS.jpg" alt="Animals coming out of books"/>
   
   <body>  
-  <p>Το <strong>γλωσσικό χιούμορ<strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p><br>
+  <p>Το <strong>γλωσσικό χιούμορ</strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p><br>
   <ol>
     <li>Η γλώσσα είναι ένα μέσο με το οποίο δηλώνονται πράγματα ή σκέψεις μέσω ήχων.<br>
       Είναι νόμος της γλώσσας ότι κάθε δεδομένος γλωσσικός ήχος δηλώνει το ίδιο πράγμα και μάλιστα μόνο εκείνο.</li>
