--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <body>
     <h1>Χιούμορ και άλλα</h1>
-    <img src="/ANIMALS_SHELFS_BOOKS.jpg" alt="Animals coming out of books"/>
+    <img &nbrsp&nbrspsrc="/ANIMALS_SHELFS_BOOKS.jpg" alt="Animals coming out of books"/>
   <p>Το <strong>γλωσσικό χιούμορ</strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p><br>
   <ol>
     <li>Η γλώσσα είναι ένα μέσο με το οποίο δηλώνονται πράγματα ή σκέψεις μέσω ήχων.<br>
