--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Χιούμορ και άλλα</h1>
     <img src="/ANIMALS_SHELFS_BOOKS.jpg" alt="Animals coming out of books"/>
+    <h2>Γλωσσικό χιούμορ θα πει "Παραβιάζω τα τετριμμένα"</h2>
   <p>Το <strong>γλωσσικό χιούμορ</strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p><br>
   <ol>
     <li>Η γλώσσα είναι ένα μέσο με το οποίο δηλώνονται πράγματα ή σκέψεις μέσω ήχων.<br>
