--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   
   <body>
     <h1>Χιούμορ και άλλα</h1>
+    <a href="http://poematter.blogspot.com/">Μήπως έψαχνες αυτό;</a>
+    <a href="https://lyd-83.github.io/svoura/">Αν αγαπάς τα ζωάκια!</a>
     <img src="/ANIMALS_SHELFS_BOOKS.jpg" alt="Animals coming out of books"/>
     <h2>Γλωσσικό χιούμορ θα πει "Παραβιάζω τα τετριμμένα"</h2>
   <p>Το <strong>γλωσσικό χιούμορ</strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p><br>
