--- a/index.html
+++ b/index.html
@@ -17,3 +17,13 @@
     <li>Οι λέξεις είναι πράγματα που φτιάχτηκαν από τον άνθρωπο και χρησιμοποιούνται από τον άνθρωπο, και όχι πρόσωπα με δικό τους θυμικό και συνείδηση.<br>
       Το νόημά τους ή η ανυπαρξία νοήματός τους εξαρτάται από τη σωστή ή μη χρήση τους από τον χρήστη.</li>
   </ol>
+    <h2>Απλές συμβουλές για το πώς<h2>
+      <p><strong>Άλλα λέω, άλλα κάνω και άλλα εννοώ</p></br>
+      <p>Πολλές φορές άλλο λέμε και άλλο εννοούμε. Για παράδειγμα, αν ακούσετε στον δρόμο να φωνάζει κάποιος σε έναν άλλο: "Καλά, ε; Πέτυχα χθες μια ζαργάνα άλλο πράμα!"<br>
+        Είστε πραγματικά σίγουροι για το τι ακούσατε; Ο αγαπητός μας φίλος πήγε τάχα για ψάρεμα ή μήπως είχε μια... υπέροχη γνωριμία με μια γυναίκα που τον εντυπωσίασε;</p><br>
+      <p><strong>Ένα κενό ανάμεσα σ' αυτό που γίνεται και σ' αυτό που θα έπρεπε να γίνεται<strong></p><br>
+      <p>Γυρνάτε σπίτι έπειτα από μια κουραστική μέρα στη δουλειά και σίγουρα το τελευταίο με το οποίο θέλετε να ασχοληθείτε είναι οι δουλειές του σπιτιού.</br>
+        Ωστόσο, ενώ νομίζετε ότι τα έχετε όλα συμφωνημένα, ποιος θα κάνει ποιες δουλειές και πότε, μπαίνετε στην κουζίνα και αντικρίζετε έναν νεροχύτη πιάτων γεμάτο με πιάτα.<br>
+        Γυρνάτε τότε στο αγαπημένο σας έτερο ήμισυ και αναφωνείτε: "Τι καλά που έχουμεπ πλυντήριο πιάτων, τι άσκημα που δεν βάζει μέσα μόνο του τα πιάτα!"</p>
+      
+      
