--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="https://lyd-83.github.io/svoura/" target="_blank">Αν αγαπάς τα ζωάκια!</a><br><br>
     <img src="/ANIMALS_SHELFS_BOOKS.jpg" alt="Animals coming out of books"/>
     <h2>Γλωσσικό χιούμορ θα πει "Παραβιάζω τα τετριμμένα"</h2>
-  <p>Το <strong>γλωσσικό χιούμορ</strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p><br>
+  <p>Το <strong>γλωσσικό χιούμορ</strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p>
   <ol>
     <li>Η γλώσσα είναι ένα μέσο με το οποίο δηλώνονται πράγματα ή σκέψεις μέσω ήχων.<br>
       Είναι νόμος της γλώσσας ότι κάθε δεδομένος γλωσσικός ήχος δηλώνει το ίδιο πράγμα και μάλιστα μόνο εκείνο.</li>
