--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <li>Οι λέξεις είναι πράγματα που φτιάχτηκαν από τον άνθρωπο και χρησιμοποιούνται από τον άνθρωπο, και όχι πρόσωπα με δικό τους θυμικό και συνείδηση.<br>
       Το νόημά τους ή η ανυπαρξία νοήματός τους εξαρτάται από τη σωστή ή μη χρήση τους από τον χρήστη.</li>
   </ol>
-    <h2>Απλές συμβουλές για το πώς<h2>
-      <p><strong>Άλλα λέω, άλλα κάνω και άλλα εννοώ</p></br>
+    <h2>Απλές συμβουλές για το πώς</h2>
+      <p><strong>Άλλα λέω, άλλα κάνω και άλλα εννοώ</strong></p></br>
       <p>Πολλές φορές άλλο λέμε και άλλο εννοούμε. Για παράδειγμα, αν ακούσετε στον δρόμο να φωνάζει κάποιος σε έναν άλλο: "Καλά, ε; Πέτυχα χθες μια ζαργάνα άλλο πράμα!"<br>
         Είστε πραγματικά σίγουροι για το τι ακούσατε; Ο αγαπητός μας φίλος πήγε τάχα για ψάρεμα ή μήπως είχε μια... υπέροχη γνωριμία με μια γυναίκα που τον εντυπωσίασε;</p><br>
       <p><strong>Ένα κενό ανάμεσα σ' αυτό που γίνεται και σ' αυτό που θα έπρεπε να γίνεται<strong></p><br>
