--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       <img src="ACCIDENTALLY_NOT.png" alt="Cartoon and humor"/>
       <p>Γυρνάτε σπίτι έπειτα από μια κουραστική μέρα στη δουλειά και σίγουρα το τελευταίο με το οποίο θέλετε να ασχοληθείτε είναι οι δουλειές του σπιτιού.</br>
         Ωστόσο, ενώ νομίζετε ότι τα έχετε όλα συμφωνημένα, ποιος θα κάνει ποιες δουλειές και πότε, μπαίνετε στην κουζίνα και αντικρίζετε έναν νεροχύτη πιάτων γεμάτο με πιάτα.<br>
-        Γυρνάτε τότε στο αγαπημένο σας έτερο ήμισυ και αναφωνείτε: "Τι καλά που έχουμεπ πλυντήριο πιάτων, τι άσκημα που δεν βάζει μέσα μόνο του τα πιάτα!"</p>
+        Γυρνάτε τότε στο αγαπημένο σας έτερο ήμισυ και αναφωνείτε: "Τι καλά που έχουμε πλυντήριο πιάτων, τι άσκημα που δεν βάζει μέσα μόνο του τα πιάτα!"</p>
       
       
