--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <h2>Απλές συμβουλές για το πώς</h2>
       <p><strong>Άλλα λέω, άλλα κάνω και άλλα εννοώ</strong></p>
-      <img src="/BOOK_WORLD.jpg" alt="Things coming out of a book"/>
+      <img src="" alt="Things coming out of a book"/>
       <p>Πολλές φορές άλλο λέμε και άλλο εννοούμε. Για παράδειγμα, αν ακούσετε στον δρόμο να φωνάζει κάποιος σε έναν άλλο: "Καλά, ε; Πέτυχα χθες μια ζαργάνα άλλο πράμα!"<br>
         Είστε πραγματικά σίγουροι για το τι ακούσατε; Ο αγαπητός μας φίλος πήγε τάχα για ψάρεμα ή μήπως είχε μια... υπέροχη γνωριμία με μια γυναίκα που τον εντυπωσίασε;</p><br>
      
