--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <h1>Χιούμορ και άλλα</h1>
     <a href="http://poematter.blogspot.com/" target="_blank">Μήπως έψαχνες αυτό;</a><br>
     <a href="https://lyd-83.github.io/svoura/" target="_blank">Αν αγαπάς τα ζωάκια!</a><br><br>
+    <p>Δες τι υπάρχει εδώ:</p>
+    <ul>
+      <li><a href="#Ορισμός">Ορισμός του χιούμορ</a></li>
+      <li><a href="#Συμβουλές">Συμβουλές για το πώς</a></li>
+    </ul>
+   
     <img src="/ANIMALS_SHELFS_BOOKS.jpg" alt="Animals coming out of books"/>
     
-    <h2>Γλωσσικό χιούμορ θα πει "Παραβιάζω τα τετριμμένα"</h2>
+    <h2 id="Ορισμός">Γλωσσικό χιούμορ θα πει "Παραβιάζω τα τετριμμένα"</h2>
   <p>Το <strong>γλωσσικό χιούμορ</strong> συνεπάγεται την παραβίαση, σε μια δεδομένη περίπτωση, μιας από τις <em>ακόλουθες γενικές γλωσσικές αρχές</em>:</p>
   <ol>
     <li>Η γλώσσα είναι ένα μέσο με το οποίο δηλώνονται πράγματα ή σκέψεις μέσω ήχων.<br>
@@ -19,7 +25,7 @@
       Το νόημά τους ή η ανυπαρξία νοήματός τους εξαρτάται από τη σωστή ή μη χρήση τους από τον χρήστη.</li>
   </ol>
     
-    <h2>Απλές συμβουλές για το πώς</h2>
+    <h2 id="Συμβουλές">Απλές συμβουλές για το πώς</h2>
       <p><strong>Άλλα λέω, άλλα κάνω και άλλα εννοώ</strong></p>
       <img src="BOOK_WORLD.jpg" alt="Things coming out of a book"/>
       <p>Πολλές φορές άλλο λέμε και άλλο εννοούμε. Για παράδειγμα, αν ακούσετε στον δρόμο να φωνάζει κάποιος σε έναν άλλο: "Καλά, ε; Πέτυχα χθες μια ζαργάνα άλλο πράμα!"<br>
