--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       <thead>
         <tr>
           <th></th>
-          <th>"ΟΜΟΗΧΑ"</th>
-          <th>"ΕΚ ΠΑΡΑΔΡΟΜΗΣ"</th>
-          <th>"ΑΡΓΚΟ"</th>
-          <th>"ΜΕΤΑΦΟΡΙΚΗ ΧΡΗΣΗ</th>
+          <th>ΟΜΟΗΧΑ</th>
+          <th>ΕΚ ΠΑΡΑΔΡΟΜΗΣ</th>
+          <th>ΑΡΓΚΟ</th>
+          <th>ΜΕΤΑΦΟΡΙΚΗ ΧΡΗΣΗ</th>
         </tr>
       </theead>
       <tbody>
