--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <td>Σήκω - Σύκο</td> 
           <td>Τεχνικός - Τεχνητός</td>
           <td>Γαύρος</td>
-          <td>Τα είπαμε ένα χέρι</td>
+          <td>Λύνω τα χέρια</td>
         </tr>
         <tr>
           <th scope="row">Χα χα χα χα!</th>
