--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
       <li><a href="#Ορισμός">Ορισμός του χιούμορ</a></li>
       <li><a href="#Συμβουλές">Συμβουλές για το πώς</a></li>
+      <li><a href="#Ιδέες">Οι δικές σου ιδέες;</a></li>
     </ul>
    
     <img src="/ANIMALS_SHELFS_BOOKS.jpg" alt="Animals coming out of books"/>
@@ -79,7 +80,7 @@
       </tbody>
     </table>
 
-<h2>Οι δικές σου ιδέες;</h2>
+<h2 id="Ιδέες">Οι δικές σου ιδέες;</h2>
 
           
       
