--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <h2 id="Ιδέες">Οι δικές σου ιδέες;</h2>
   <form action="/example.html" method="POST">
-    <input type="text" name="first-text-field">
+    <input type="text" name="first-text-field" value="already pre-filled">
     
 
           
