--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 <h2 id="Ιδέες">Οι δικές σου ιδέες;</h2>
   <form action="/example.html" method="POST">
     <input type="text" name="first-text-field" value="already pre-filled">
+    <input type="submit" value="Send">
+  </form>
     
 
           
