--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 
 <h2 id="Ιδέες">Οι δικές σου ιδέες;</h2>
   <form action="/example.html" method="POST">
-    <input type="text" name="first-text-field" value="already pre-filled">
+    <label for="idea">Έχεις κάποια ιδέα;</label>
+    <br>
+    <input type="text" name="first-text-field" value="already pre-filled" id="idea">
     <input type="submit" value="Send">
   </form>
     
