--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
     <title>Νέα Δοκιμή</title>
   </head>
   
+  <form action="/example.html" method="POST">
+    <h1>Δημιουργία φόρμας</h1>
+    <p>Εδώ γράφουμε ό,τι θέμε!</p>
+  </form>
+  
+  
   
     
