--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <form action="/example.html" method="POST">
     <h1>Δημιουργία φόρμας</h1>
     <p>Εδώ γράφουμε ό,τι θέμε!</p>
-    <input type="text" name="first-text-field" placehoder="Εδώ γράφεις!">
+    <input type="text" name="first-text-field" placeholder="Εδώ γράφεις!">
   </form>
   
   
