--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <input type="text" name="first-text-field" placeholder="Εδώ γράφεις!">
   </form>
   
+  <form action="/example.html" method="POST">
+    <label for="Όνομα">Το όνομά σου;</label>
+    <br>
+    <input type="text name="Όνομα" placeholder="Εδώ βάλε όνομα" id="Όνομα">
+                                                                          
+  
   
   
     
