--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <label for="Όνομα">Το όνομά σου;</label>
     <br>
     <input type="text name="Όνομα" placeholder="Εδώ βάλε όνομα" id="Όνομα">
+                                                                          </form>
+                                                      
                                                                           
   
   
