--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   
   <form>
-    <label for="user-password">Βάλε κωδικό:</label>
-    <input type="password" name="Κωδικός" id="user-password" placeholder="Εδώ μπαίνει ο κωδικός σου">
+    <label for="Ένταση">ΕΝΤΑΣΗ ΗΧΟΥ</label>
+    <input id="ένταση" type="range" name="ένταση" min="0" max="100" step="1">
   </form>
                                                                           
                                                                           
