--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <title>Νέα Δοκιμή</title>
   </head>
+  <p>ΔΙΑΛΕΞΕ ΥΛΙΚΑ ΓΙΑ ΤΗΝ ΠΙΤΣΑ:</p>
+  <label for="Τυρί">Τυρί</label>
+  <input type="checkbox id="Τυρί" name="Υλικό" value="Τυρί">
+  <label for="Μανιτάρια">Μανιτάρια</label>
+  <input type="checkbox id="Μανιτάρια" name="Υλικό" value="Μανιτάρια">
+                                                                     </form>
+
   
 
                                                                         
