--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Νέα Δοκιμή</title>
   </head>
+  <form>
   <p>ΔΙΑΛΕΞΕ ΥΛΙΚΑ ΓΙΑ ΤΗΝ ΠΙΤΣΑ:</p>
   <label for="Τυρί">Τυρί</label>
   <input type="checkbox id="Τυρί" name="Υλικό" value="Τυρί">
