--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <title>Νέα Δοκιμή</title>
   </head>
   <form>
-    <p>ΔΙΑΛΕΞΕ ΥΛΙΚΑ ΓΙΑ ΤΗΝ ΠΙΤΣΑ:</p>
-    <label for="Τυρί">Τυρί</label>
-    <input type="checkbox id="Τυρί" name="Υλικό" value="Τυρί">
+    <p>Choose pizza toppings:</p>
+    <label for="cheese">Cheese</label>
+    <input id="cheese" name="topping" type="checkbox" value="cheese">
     <br>
-    <label for="Μανιτάρια">Μανιτάρια</label>
-    <input type="checkbox id="Μανιτάρια" name="Υλικό" value="Μανιτάρια">
+    <label for="mushrooms">Mushrooms</label>
+    <input id="mushrooms type="checkbox name="topping" value="mushrooms">
   </form>
+  
 
   
 
