--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <input id="cheese" name="topping" type="checkbox" value="cheese">
     <br>
     <label for="mushrooms">Mushrooms</label>
-    <input id="mushrooms type="checkbox name="topping" value="mushrooms">
+    <input id="mushrooms type="checkbox" name="topping" value="mushrooms">
   </form>
   
 
