--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
   <head>
     <title>Νέα Δοκιμή</title>
   </head>
-  <form>
-    <p>Choose pizza toppings:</p>
-    <label for="cheese">Cheese</label>
-    <input id="cheese" name="topping" type="checkbox" value="cheese">
-    <br>
-    <label for="mushrooms">Mushrooms</label>
-    <input id="mushrooms name="topping" type="checkbox" value="mushrooms">
+  <body>
+    <
   </form>
   
   
