--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Νέα Δοκιμή</title>
   </head>
   <body>
+    <h1>This is a photo:</h1>
     <img src="DIALOGUE.jpg">
-  </form>
+  </body>
   
   
 
