--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>This is a photo:</h1>
-    <img src="DIALOGUE.jpg">
+    <img src="DIALOGUE.jpg" width="800" height="600">
   </body>
   
   
